--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@cypress/react": "^9.0.1",
+    "@cypress/vite-dev-server": "^6.0.3",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
-    "cypress": "^13.13.1",
+    "cypress": "^14.3.2",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "start-server-and-test": "^2.0.11",
     "typescript": "^5.5.3",
     "vitest": "^2.0.3",
     "wait-on": "^7.2.0"
