--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,11 +1,20 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "lib": ["ES2020", "DOM"],
-      "types": ["cypress"],
-      "moduleResolution": "node",
-      "strict": false
-    },
-    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
-  }
-  
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "types": ["cypress", "node", "@testing-library/cypress"],
+    "isolatedModules": false,
+    "noEmit": true,
+    "composite": true,
+    "jsx": "react-jsx",
+    "strict": true
+  },
+  "include": [
+    "**/*.tsx",
+    "**/*.ts",
+    "**/*.js",
+    "**/*.jsx",
+    "../client/src/**/*"
+  ]
+}
