--- a/package.json
+++ b/package.json
@@ -9,33 +9,27 @@
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client:build":   "cd client && vite build",
-    "client:preview": "cd client && vite preview --port 5173 --strictPort",
+    "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
     "render-build": "npm install && npm run build",
-    "cy:open": "cypress open",
-    "cy:run":  "cypress run",
-    "test": "npm run client:build && start-server-and-test start:prod http://localhost:5173 cy:run",
-    "start:prod": "concurrently \"npm run server\" \"npm run client:preview\""
+    "test": "cypress run --component",
+    "test-gui": "npx cypress open --detached"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cypress/react": "^9.0.1",
-    "@cypress/vite-dev-server": "^6.0.3",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@testing-library/cypress": "^10.0.3",
+    "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
-    "cypress": "^14.3.2",
+    "cypress": "^13.17.0",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "start-server-and-test": "^2.0.11",
     "typescript": "^5.5.3",
     "vitest": "^2.0.3",
     "wait-on": "^7.2.0"
