--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/vite-dev-server": "^6.0.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
-    "dotenv": "^16.4.5",
-    "typescript": "^5.5.3"
+    "cypress": "^14.4.0",
+    "dotenv": "^16.5.0",
+    "typescript": "^5.8.3"
   }
 }
